examples/type_system/failing/179_data_missing_open_brace.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

data Maybe<T> Some(T), None }
let after = 1
